--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title> react map </title>
     <!--<script src="build/react.js"></script>
     <script src="build/react-dom.js"></script>
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>-->
     <link rel="stylesheet" type="" href="./app.css">
-    <link rel="stylesheet" type="" href="./node_modules/mapbox-gl/dist/mapbox-gl.css">
+    <link rel="stylesheet" type="" href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css">
   </head>
   <body>
-    <div id="example"></div>
     <script src="bundle.js"></script>
     <!--<script type="text/babel" src="index.js"></script>-->
   </body>
