update marker display with Ali icon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://npmcdn.com/babel-core@5.8.38/browser.min.js"></script>-->
     <link rel="stylesheet" type="" href="./app.css">
     <link rel="stylesheet" type="" href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css">
+    <script src="http://at.alicdn.com/t/font_xzkcfgd21uac3di.js">
+        </script>
   </head>
   <body>
     <script src="bundle.js"></script>
