--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="" href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.26.0/mapbox-gl.css">
     <script src="http://at.alicdn.com/t/font_xzkcfgd21uac3di.js">
         </script>
+        <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
   </head>
   <body>
     <script src="bundle.js"></script>
